Fix badge align for large line-heights

--- a/components/badge.css
+++ b/components/badge.css
@@ -6,7 +6,7 @@
 		padding: .4em;
 		margin: .2em;
 		font-size: .6em;
-		vertical-align: top;
+		vertical-align: super;
 		border-radius: var(--corner-radius, 0px);
 	}
 
